--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -8,6 +8,6 @@
 body{
     background: #ccc;
     /*background: url(../../image/floor1-4.jpg);*/
-    color:red;
+    /*color:red;*/
     font-size:50px;
 }
