--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -10,14 +10,14 @@
                     欢迎，
                     <span class="username"></span>
                 </span>
-                <span class="link">退出</span>
+                <span class="link js-logout">退出</span>
             </span>
         </div>
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="./cart.html" class="link">
-                <i class="fa fa-shopping-cart"></i>
-                购物车(<span class="cart-cont">0</span>)
+                <a class="link" href="./cart.html">
+                    <i class="fa fa-shopping-cart"></i>
+                    购物车(<span class="cart-count">0</span>)
                 </a>
             </li>
             <li class="nav-item">
@@ -31,25 +31,4 @@
             </li>
         </ul>
     </div>
-
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
